# Synapse-prototype

./: Cargo.toml  build.rs
envelope/src/: lib.rs  main.rs
main/: Cargo.toml
main/src/: lib.rs  main.rs  manager.rs  message.rs
main/src/message/: controller.rs  field.rs
matcha/: Cargo.toml  README.md
matcha/src/tea/: app.rs  component.rs  ui.rs  window.rs
matcha/src/widgets/divs/: column.rs  container.rs  drag_field.rs  row.rs
matcha/src/widgets/divs/container/: layout.rs
matcha/src/widgets/elements/: button.rs  square.rs  teacup.rs  text.rs
node/: Cargo.toml
node/src/: channel.rs  err.rs  field.rs  framework.rs  lib.rs  node.rs  node_controller.rs  node_core.rs  plugin.rs  plugin_manager.rs  socket.rs  types.rs
node/src/node/: field.rs  node_core.rs  socket.rs  types.rs
node/src/node/socket/: input.rs  output.rs
node/src/node_controller/: tests.rs
node/src/renderer/: channel.rs  field.rs  framework.rs
node/src/socket/: input.rs  output.rs
plugin/: Cargo.toml
plugin/src/: lib.rs  test_plugins.rs
plugin/src/test_plugins/: i64_to_string.rs  output_frame_count.rs
pluto/: Cargo.toml
pluto/src/: main.rs
src/: lib.rs
src/node_forest/: channel.rs  err.rs  field.rs  mod.rs  node.rs  socket.rs  types.rs
src/node_v0/: node.rs  node_field.rs
src/node_v1/: node.rs  types.rs
src/node_v2/: mod.rs  node.rs
src/node_v2/types/: channels.rs  id.rs  mod.rs  sockets.rs
src/nodes/: mod.rs  read_mv.rs
src/test/: mod.rs
