[workspace]

members = ["main", "node", "envelope", "matcha", "plugin"]

[workspace.dependencies]
node = { path = "node" }
envelope = { path = "envelope" }
plugin = { path = "plugin" }
matcha = { path = "matcha" }

# runtime
tokio = { version = "1.38.0", features = ["full"] }
rayon = "1.10.0"
pollster = "0.4"
# async trait
async-trait = "0.1"
# other
uuid = { version = "1.8.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
