[package]
name = "tea-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
# runtime
rayon = { workspace = true }
pollster = { workspace = true }
# window
winit = "0.30"
# graphics
wgpu = "22.1.0"
vello = "0.3.0"
bytemuck = { version = "1.17", features = ["derive"] }
nalgebra = { version = "0.33", features = ["bytemuck"] }
image = "0.25"
# text
pathfinder_geometry = "0.5.1"
cosmic-text = "0.12.1"
# other
bitflags = "2.6"
