[package]
name = "node"
version = "0.0.1"
edition = "2021"

[dependencies.uuid]
workspace = true
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dependencies.tokio]
workspace = true
features = ["full"]

[dependencies.async-trait]
workspace = true

# crate within the project
[dependencies]
envelope = { workspace = true }
